# wary

./: .gitignore  ;  Cargo.toml  README.md  README.me  todo.txt
.github/workflows/: ci.yml
assets/: demo.tape
derive/: Cargo.toml
derive/src/: lib.rs
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/kitchen_sink/: Cargo.toml
examples/kitchen_sink/src/: main.rs
src/: lib.rs  main.rs  util.rs
src/error/: mod.rs  path.rs
src/options/: lowercase.rs  mod.rs  uppercase.rs
src/options/modifier/: inner.rs
src/options/rule/: addr.rs  alphanumeric.rs  ascii.rs  contains.rs  dive.rs  email.rs  equals.rs  func.rs  inner.rs  length.rs  matches.rs  prefix.rs  range.rs  regex.rs  required.rs  semver.rs  suffix.rs  url.rs
src/rule/: addr.rs  alphanumeric.rs  ascii.rs  contains.rs  email.rs  equals.rs  inner.rs  length.rs  matches.rs  mod.rs  prefix.rs  range.rs  semver.rs  suffix.rs  uppercase.rs  url.rs
wary/: Cargo.toml  README.md
wary/src/: axum.rs  lib.rs
wary/src/error/: mod.rs  path.rs
wary/src/options/: lowercase.rs  mod.rs  uppercase.rs
wary/src/options/modifier/: custom.rs  dive.rs  func.rs  trim.rs
wary/src/options/rule/: addr.rs  alphanumeric.rs  and.rs  ascii.rs  contains.rs  credit_card.rs  custom.rs  custom_async.rs  email.rs  equals.rs  func.rs  length.rs  or.rs  prefix.rs  range.rs  regex.rs  required.rs  semver.rs  suffix.rs  time.rs  url.rs  uuid.rs
wary/src/options/transformer/: custom.rs  custom_async.rs  dive.rs  func.rs  inner.rs  trim.rs
wary_derive/: Cargo.toml
wary_derive/src/: attr.rs  emit.rs  lib.rs  modify.rs  util.rs  validate.rs
wary_derive/src/as_ref/: emit.rs
wary_derive/src/wary/: emit.rs  mod.rs  modify.rs  transform.rs  validate.rs
