[workspace]
members = [".", "wary_derive", "examples/*"]

[package]
name = "wary"
version = "0.0.1"
edition = "2021"
description = "A simple validation library"
license = "MIT OR Apache-2.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]
repository = "https://github.com/matteopolak/wary"

[dependencies]
thiserror = "2"

email_address = { version = "0.2", default-features = false, optional = true }
regex = { version = "1", optional = true }
url = { version = "2", optional = true }
wary_derive = { path = "wary_derive", version = "0.0.1", optional = true }
semver = { version = "1", optional = true }
unicode-segmentation = { version = "1", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["derive", "full", "serde"]
full = ["email", "url", "regex", "semver", "graphemes"]

derive = ["dep:wary_derive"]
email = ["dep:email_address"]
url = ["dep:url"]
regex = ["dep:regex"]
semver = ["dep:semver"]
graphemes = ["dep:unicode-segmentation"]
serde = ["dep:serde", "dep:serde_json"]

