[workspace]
members = ["wary", "wary_derive", "examples/*"]
resolver = "2"

[workspace.package]
rust-version = "1.78"
license = "MIT OR Apache-2.0"
authors = ["Matthew Polak <contact@matteopolak.com>"]
repository = "https://github.com/matteopolak/wary"
keywords = ["validation", "validate", "transform", "no_std", "no_alloc"]
categories = ["no-std", "no-std::no-alloc"]
