[package]
name = "wary"
version = "0.0.4"
description = "A simple validation library"
edition = "2021"
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
thiserror = { version = "2", default-features = false }

email_address = { version = "0.2", default-features = false, optional = true }
regex = { version = "1", optional = true, default-features = false }
url = { version = "2", optional = true, default-features = false }
wary_derive = { path = "../wary_derive", version = "0.0.4", optional = true }
semver = { version = "1", optional = true, default-features = false }
unicode-segmentation = { version = "1", optional = true }
serde = { version = "1", optional = true, default-features = false, features = ["derive"] }
once_cell = { version = "1", optional = true, default-features = false, features = ["critical-section"] }
uuid = { version = "1", optional = true, default-features = false }

[features]
default = ["std", "derive"]
full = ["email", "url", "regex", "semver", "graphemes", "uuid"]

alloc = ["serde?/alloc"]
std = ["alloc"]

derive = ["dep:wary_derive"]
# TODO: https://github.com/johnstonskj/rust-email_address/pull/36
email = ["dep:email_address", "std"]
url = ["dep:url"]
# once_cell is needed when std is disabled
regex = ["dep:regex", "dep:once_cell"]
semver = ["dep:semver"]
graphemes = ["dep:unicode-segmentation"]
uuid = ["dep:uuid"]

serde = ["dep:serde"]
