[package]
name = "wary_derive"
version = "0.1.1"
description = "Procedural macros for wary"
edition = "2021"
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro2 = "1"
quote = "1"
syn = "2"

