[package]
name = "wary_derive"
version = "0.3.0"
description = "Procedural macros for wary"
edition = "2021"
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro2 = "1"
quote = "1"
serde_derive_internals = { version = "0.29.1", optional = true }
syn = "2"

[features]
default = []
serde = ["dep:serde_derive_internals"]
